syntax = "proto3";

package raccoons.protoc;

option java_package = "co.raccoons.example";
//option java_outer_classname = "UserInfoProto";
option java_multiple_files = false;

import "nothingx.proto";

message UserInfo {

  string name = 1;
  string gender = 2;
  string age = 3;
  Nothing var = 4;
}